[gd_scene load_steps=9 format=3 uid="uid://dwgsq4s8dcwik"]

[ext_resource type="Script" path="res://temp/procgen_room.gd" id="1_2fxxj"]
[ext_resource type="ArrayMesh" uid="uid://bn44inly8vanx" path="res://temp/3d/procgen_room.obj" id="1_r08al"]
[ext_resource type="Script" path="res://temp/procgen_mesh.gd" id="2_7nmmy"]
[ext_resource type="ArrayMesh" uid="uid://or3gwm0mophi" path="res://temp/3d/little_grid.obj" id="3_7jkep"]
[ext_resource type="Script" path="res://temp/little_grid.gd" id="4_0javd"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_6mnup"]
sky_top_color = Color(0.42572, 0.671786, 0.878906, 1)
sky_horizon_color = Color(0.786822, 0.879711, 0.934432, 1)
ground_bottom_color = Color(0.721569, 0.847059, 0.858824, 1)
ground_horizon_color = Color(0.786822, 0.879711, 0.934432, 1)

[sub_resource type="Sky" id="Sky_mtma0"]
sky_material = SubResource( "ProceduralSkyMaterial_6mnup" )

[sub_resource type="Environment" id="Environment_eheym"]
background_mode = 2
sky = SubResource( "Sky_mtma0" )
ambient_light_source = 3
ambient_light_color = Color(0.541176, 0.541176, 0.541176, 1)
ambient_light_sky_contribution = 0.25
tonemap_mode = 2
tonemap_exposure = 0.75
tonemap_white = 5.0
ssao_enabled = true
sdfgi_read_sky_light = false
sdfgi_energy = 0.1
glow_enabled = true

[node name="Node3D" type="Node3D"]
script = ExtResource( "1_2fxxj" )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( "Environment_eheym" )

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.707107, -0.672498, -0.218508, -2.98023e-08, -0.309017, 0.951057, -0.707107, 0.672498, 0.218508, 0, 0, 0)
light_bake_mode = 1
shadow_enabled = true
directional_shadow_split_2 = 0.25
directional_shadow_split_3 = 0.55
directional_shadow_max_distance = 250.0

[node name="DirectionalLight3D2" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.906308, -0.073387, 0.416198, 0, -0.984808, -0.173648, 0.422618, 0.157379, -0.892539, 0, 0, 0)
light_energy = 0.75
light_bake_mode = 1
shadow_enabled = true
directional_shadow_split_1 = 0.2
directional_shadow_split_2 = 0.4
directional_shadow_split_3 = 0.6
directional_shadow_blend_splits = true
directional_shadow_max_distance = 250.0

[node name="RoomMesh" type="MeshInstance3D" parent="."]
mesh = ExtResource( "1_r08al" )
script = ExtResource( "2_7nmmy" )

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 2, 4, 3.5)
projection = 1
size = 6.0

[node name="Timer" type="Timer" parent="."]

[node name="GridMesh" type="MeshInstance3D" parent="."]
mesh = ExtResource( "3_7jkep" )
script = ExtResource( "4_0javd" )

[connection signal="timeout" from="Timer" to="RoomMesh" method="_on_timer_timeout"]
[connection signal="grid_distorted" from="GridMesh" to="." method="_on_grid_mesh_grid_distorted"]
